--- a/20_microservicio_formacion_acceso_seguro/src/main/resources/application.properties
+++ b/20_microservicio_formacion_acceso_seguro/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8500
 server.servlet.context-path=/formacion
 
 usuario=user1
-pwd=user1
+clave=user1
 
-admin.user=admin
-admin.pass=admin
+admin.usuario=admin
+admin.clave=admin
